fixed x overflow

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   /* background-color: #dbf9ff; */
   font-family: "Poppins", sans-serif;
   overflow-x: hidden;
+  position: relative;
 }
 nav {
   position: sticky;
